Add Flight done.
